# prc

./: .gitignore  CMakeLists.txt  COPY  TODO  boost_spirit.patch  conanfile.txt  format_flopzilla  pyproject.toml
app/: CMakeLists.txt  actions.cpp  actions.hpp  main.cpp
include/prc/: add.hpp
lib/: CMakeLists.txt
lib/include/prc/: card.hpp  combo.hpp  folder.hpp  hand.hpp  hand_range.hpp  paired_hand.hpp  range.hpp  range_elem.hpp  rank.hpp  suit.hpp  suitedness.hpp  unpaired_hand.hpp
lib/include/prc/detail/: unicode.hpp
lib/include/prc/equilab/: parse.hpp  serialize.hpp
lib/include/prc/equilab/parser/: api.hpp  api_def.hpp  ast.hpp  ast_adapted.hpp  config.hpp
lib/include/prc/gtoplus/: serialize.hpp
lib/include/prc/gtoplus/parser/: api.hpp  api_def.hpp  ast.hpp  ast_adapted.hpp  config.hpp
lib/include/prc/parser/: api.hpp  api_def.hpp  as_type.hpp  ast.hpp  ast_adapted.hpp  config.hpp
lib/include/prc/pio/: parse.hpp  serialize.hpp
lib/include/prc/pio/parser/: api.hpp  api_def.hpp  ast.hpp  ast_adapted.hpp  config.hpp
lib/src/: api_def.cpp  card.cpp  combo.cpp  folder.cpp  hand.cpp  hand_range.cpp  paired_hand.cpp  range.cpp  range_elem.cpp  unpaired_hand.cpp
lib/src/detail/: unicode.cpp
lib/src/equilab/: api_def.cpp  parse.cpp  serialize.cpp
lib/src/gtoplus/: api_def.cpp  serialize.cpp
lib/src/pio/: api_def.cpp  parse.cpp  serialize.cpp
lib/test/: CMakeLists.txt  main.cpp  test_equilab.cpp  test_gtoplus.cpp  test_parser.cpp  test_pio.cpp  test_prc.cpp
lib/test/data/equilab/: 1 group.hr  2_groups.hr  folders.hr  folders_and_ranges.hr  multiple_weights.hr  nested.hr  note.hr  pairs.hr  random.hr  unicode.hr
lib/test/data/gtoplus/: aces.txt  empty.txt  grouped_range.txt  settings.txt  weights.txt
lib/test/data/pio/: pairs.txt  suited_aces.txt
notes/gtoplus/: current_grammar.txt
notes/gtoplus/category_single_range/: category_single_range.dump  category_single_range.txt  category_single_range_def.txt
notes/gtoplus/category_two_ranges/: category_two_ranges.dump  category_two_ranges_def.txt
notes/gtoplus/multiple_groups/: asd.txt  l  (+15 more)
src/: add.cpp
test/: CMakeLists.txt  test_add.cpp
(+11 files in other folders)
